--- a/ClientApp/src/app/menu/menu.component.scss
+++ b/ClientApp/src/app/menu/menu.component.scss
@@ -3,6 +3,7 @@ $mainColor: rgb(66, 66, 66);
     background-color: $mainColor;
     height: 100vh;
     width: 265px;
+    float: left;
 }
 .menu-item{
     background-color: rgb(130, 0, 0);
