--- a/ClientApp/src/app/app.component.html
+++ b/ClientApp/src/app/app.component.html
@@ -1,2 +1,11 @@
-<app-menu></app-menu>
+<div class="container"> 
+    <div class="menu">
+        <app-menu></app-menu>
+    </div>
+    <div class="header">
+        <app-header></app-header>
+    </div>
+</div>
+<main>
 <router-outlet></router-outlet>
+</main>
